[gd_scene load_steps=14 format=3 uid="uid://b0fvrt4jjt2xe"]

[ext_resource type="Script" uid="uid://da284r44a7yqx" path="res://enemies/EnemyHUD.gd" id="1_pj5tm"]
[ext_resource type="Texture2D" uid="uid://dn00wae1rpmih" path="res://cards/assets/card_blank.png" id="2_1cr2r"]
[ext_resource type="Texture2D" uid="uid://bhoj87yuq6iyx" path="res://assets/ui/segment_empty.png" id="2_e0rbg"]
[ext_resource type="Texture2D" uid="uid://dq13k0w50lphx" path="res://assets/ui/sword.png" id="2_kuqdb"]
[ext_resource type="Texture2D" uid="uid://3hejcvufsjak" path="res://assets/ui/segment_full.png" id="3_cllx4"]
[ext_resource type="Theme" uid="uid://cdta86b2s4dni" path="res://assets/themes/global_theme.tres" id="3_krfnt"]
[ext_resource type="Texture2D" uid="uid://bgmama865ri6g" path="res://assets/ui/CardSilhouette.png" id="3_py827"]
[ext_resource type="Texture2D" uid="uid://c1rip6bh6ciwa" path="res://assets/ui/skull.png" id="3_qt3o7"]
[ext_resource type="Texture2D" uid="uid://bfsd0cekcrefe" path="res://assets/ui/shield.png" id="5_xoao5"]
[ext_resource type="Texture2D" uid="uid://ih76gffcaf08" path="res://assets/ui/segment_empty_vertical.png" id="7_kuqdb"]
[ext_resource type="Texture2D" uid="uid://dgpgst7wjcb1p" path="res://assets/ui/segment_full_vertical.png" id="8_krfnt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e0rbg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hefqa"]

[node name="EnemyHUD" type="Control" node_paths=PackedStringArray("CardImage", "EnemyAttack", "EnemyName", "HealthSegments", "HealthEmpty", "HealthFull", "DefenseSegments", "DefenseEmpty", "DefenseFull")]
custom_minimum_size = Vector2(160, 236)
layout_mode = 3
anchors_preset = 0
offset_right = 161.0
offset_bottom = 211.0
script = ExtResource("1_pj5tm")
CardImage = NodePath("VBoxContainer/HBoxContainer/EnemyCard/CardImage")
EnemyAttack = NodePath("VBoxContainer/HBoxContainer3/EnemyAttack")
EnemyName = NodePath("VBoxContainer/HBoxContainer3/EnemyName")
HealthSegments = NodePath("VBoxContainer/HBoxContainer2/HealthBar")
HealthEmpty = NodePath("VBoxContainer/HBoxContainer2/HealthBar/Empty")
HealthFull = NodePath("VBoxContainer/HBoxContainer2/HealthBar/Empty/Full")
DefenseSegments = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/DefenseBar")
DefenseEmpty = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/DefenseBar/DefenseEmptyValue")
DefenseFull = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/DefenseBar/DefenseEmptyValue/DefenseFullValue")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 140.0
offset_bottom = 190.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
modulate = Color(0.996078, 0.388235, 0.886275, 1)
layout_mode = 2
texture = ExtResource("2_kuqdb")
expand_mode = 3
stretch_mode = 5

[node name="EnemyAttack" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("3_krfnt")
theme_type_variation = &"HeadingLabel"
theme_override_font_sizes/font_size = 18
text = "0"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EnemyName" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_krfnt")
theme_type_variation = &"HeadingLabel"
theme_override_font_sizes/font_size = 18

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="DefenseBar" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_e0rbg")

[node name="DefenseEmptyValue" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/DefenseBar"]
custom_minimum_size = Vector2(16, 9)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("2_e0rbg")
stretch_mode = 1

[node name="DefenseFullValue" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/DefenseBar/DefenseEmptyValue"]
modulate = Color(0.545098, 1, 0.996078, 1)
custom_minimum_size = Vector2(16, 9)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("3_cllx4")
stretch_mode = 1

[node name="DefenseIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
modulate = Color(0.545098, 1, 0.996078, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("5_xoao5")
expand_mode = 3
stretch_mode = 5

[node name="EnemyCard" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color(0.0745098, 0.0901961, 0.137255, 1)
clip_children = 2
layout_mode = 2
texture = ExtResource("2_1cr2r")
stretch_mode = 5

[node name="CardImage" type="TextureRect" parent="VBoxContainer/HBoxContainer/EnemyCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_py827")
expand_mode = 5
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="HealthBar" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_hefqa")

[node name="Empty" type="TextureRect" parent="VBoxContainer/HBoxContainer2/HealthBar"]
custom_minimum_size = Vector2(9, 16)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("7_kuqdb")
expand_mode = 1
stretch_mode = 1

[node name="Full" type="TextureRect" parent="VBoxContainer/HBoxContainer2/HealthBar/Empty"]
modulate = Color(0.996078, 0.388235, 0.886275, 1)
custom_minimum_size = Vector2(9, 16)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_krfnt")
expand_mode = 1
stretch_mode = 1

[node name="HealthIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
modulate = Color(0.996078, 0.388235, 0.886275, 1)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = ExtResource("3_qt3o7")
expand_mode = 3
stretch_mode = 5
